2005-06-10  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/manual.rst: documenting sequence treatment.

	* src/pydo/drivers/oracleconn.py (OracleDBI.getSequence):
	signature change (useless for oracle).

	* src/pydo/base.py (PyDO._new): call to getSequence uses new signature.

	* src/pydo/dbi.py (DBIBase.getSequence): signature change to
	accomodate sequence name guessing.

	* src/pydo/drivers/psycopgconn.py (PsycopgDBI.getSequence): infer
	postgresql sequence names when not specified (suggestion by Adam Ward).

2005-06-08  Jacob Smullyan  <smulloni@smullyan.org>

	* src/testingtesting.py: pass in namePat from commandline.

	* cutting 2.Oa3 release.

	* doc/api/epydoc: fix for building api docs.
	
	* tests/README.tests: adding apologetic little note about the sad
	state of the tests.

	* doc/manual.rst: mentioning the removal of arrayfetch and joins.

	* src/pydo/base.py: removing arrayfetch.
	
	* src/pydo/joins.py: removing this module completely.

2005-06-06  Jacob Smullyan  <smulloni@smullyan.org>

	* tests/runtests.py, tests/config.py: skeleton of test framework.  

2005-06-05  Jacob Smullyan  <smulloni@smullyan.org>

	* src/testingtesting.py: now selects on basis of tag.

	* doc/api/epydoc (dependencies): put fake modules in sys.modules
	so that dbapi drivers don't need to be present to build the api
	docs. 

	* src/pydo/base.py (_metapydo.__init__): allow cls.guesscache to
	be declared as a string, which is turned into the cachedir
	parameter of a default GuessCache.

	* doc/api/Makefile (EPYDOC): call new wrapper script.

	* doc/api/epydoc: wrapper script for epydoc with somewhat
	unfortunate hack (__all__ in __init__.py confuses epydoc, so I
	delete it first).

2005-06-05  Hamish Lawson  <hbl@st-andrews.ac.uk>

	* src/pydo/drivers/oracleconn.py: Removed redundant passing of 
	cursor description to OracleResultSet and renamed 'resultset' 
	parameter to 'cursor'.

2005-06-04  Jacob Smullyan  <smulloni@smullyan.org>
